--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -5,7 +5,7 @@
 <div class="nav__right"> 
       <div class="greeting">
         <%= "こんにちは、"%>
-        <%= link_to current_user.name, user_path(current_user.id), class: :greeting__link %>
+        <%= link_to "#{current_user.name}さん", user_path(current_user), class: :greeting__link %>
       </div> 
 <% else %>
           <%# // ログインしているときは上記を表示するようにしましょう %>
