--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,17 +24,17 @@
 
         <div class="field">
           <%= f.label :name, "ユーザー名" %><br />
-          <%= f.text_field :name, id: %>
+          <%= f.text_field :name %>
         </div>
 
         <div class="field">
           <%= f.label :profile, "プロフィール" %><br />
-          <%= f.text_area :profile, class: :form__text, id:%>
+          <%= f.text_area :profile, class: :form__text %>
         </div>
 
         <div class="field">
           <%= f.label :occupation, "所属" %><br />
-          <%= f.text_area :occupation, class: :form__text, %>
+          <%= f.text_area :occupation, class: :form__text %>
         </div>
 
         <div class="field">
